--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </style>
 <script src="src/web-keyboard.js" type="module"></script>
 <body>
-    <section class="input-holder">
+    <form class="input-holder">
         <h1>Pure javascript based virtual keyboard!</h1>
         <input type="text">
         <input type="text">
@@ -83,30 +83,12 @@
         <input type="text">
         <input type="text">
 
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
-
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
-
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
-
         <textarea></textarea>
         <textarea></textarea>
         <textarea></textarea>
         <textarea></textarea>
         <textarea></textarea>
-    </section>
+    </form>
     <web-keyboard force-open="false"></web-keyboard>
 </body>
 </html>
