Hide keyboard button when alwayOpen property is set

--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
         <textarea></textarea>
         <textarea></textarea>
     </form>
-    <web-keyboard force-open="false"></web-keyboard>
+    <web-keyboard></web-keyboard>
 </body>
 </html>
